<resources>
    <string name="app_name">Minhas Tarefas</string>
    <string name="registro_com_google">Registro com Google</string>
    <string name="login_com_google">Entrar com Google</string>
    <string name="preencha_todos_os_campos">Preencha todos os campos</string>
    <string name="senha_menor_que_6">A senha precisa ter mais de 6 letras</string>
    <string name="senha_alterada">Senha alterada com sucesso!</string>
    <string name="senhas_nao_conferem">As senhas não coincidem</string>
    <string name="btn_alterar_senha">Alterar senha</string>
    <string name="descricao_task_field">Descrição</string>
    <string name="titulo_task_field">Título</string>
    <string name="btn_select_date">Data</string>
    <string name="btn_select_hour">Hora</string>
    <string name="save_task">Salvar</string>
    <string name="lista_de_tarefas">Lista de tarefas</string>
    <string name="e_mail">E-mail</string>
    <string name="nome">Nome</string>
    <string name="password">Senha</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="or">ou</string>
    <string name="atualizar_perfil">Atualizar Perfil</string>
    <string name="entrar">Entrar</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="registrar">Registrar</string>
    <string name="entrar_com_google">Entrar com Google</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="registrar_com_google">Registrar com Google</string>
    <string name="recuperar">Recuperar</string>
    <string name="sem_senha">Sem senha</string>
    <string name="senha_muito_fraca">Muito Fraca</string>
    <string name="senha_fraca">Fraca</string>
    <string name="senha_media">Média</string>
    <string name="senha_forte">Forte</string>
    <string name="senha_muito_forte">Muito Forte</string>
</resources>