<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskActivity">

    <LinearLayout
        android:id="@+id/textArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/dataArea"
        android:orientation="vertical">
        <EditText
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:backgroundTint="@color/purple_500"
            android:layout_height="wrap_content"
            android:hint="@string/titulo_task_field"
            android:layout_marginTop="50dp"
            android:padding="10dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/descricao"
            app:layout_constraintVertical_chainStyle="packed"
            />

        <EditText
            android:id="@+id/descricao"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_500"
            android:hint="@string/descricao_task_field"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:layout_marginHorizontal="20dp"
            android:gravity="top"
            android:lines="4"
            app:layout_constraintEnd_toEndOf="@id/titulo"
            app:layout_constraintStart_toStartOf="@id/titulo"
            app:layout_constraintTop_toTopOf="@id/titulo"
            />
    </LinearLayout>

    <LinearLayout
        app:layout_constraintEnd_toEndOf="@+id/textArea"
        app:layout_constraintStart_toStartOf="@+id/textArea"
        app:layout_constraintTop_toBottomOf="@+id/textArea"
        android:id="@+id/dataArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:gravity="center">
        <EditText
            android:id="@+id/in_date"
            android:backgroundTint="@color/purple_500"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:enabled="false"
            />
        <Button
            android:id="@+id/btn_date"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:text="@string/btn_select_date"
            />
    </LinearLayout>

    <LinearLayout
        app:layout_constraintEnd_toEndOf="@+id/dataArea"
        app:layout_constraintStart_toStartOf="@+id/dataArea"
        app:layout_constraintTop_toBottomOf="@+id/dataArea"
        android:id="@+id/horaArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:gravity="center">
        <EditText
            android:id="@+id/in_time"
            android:backgroundTint="@color/purple_500"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:enabled="false"/>
        <Button
            android:id="@+id/btn_time"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:text="@string/btn_select_hour"
            />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_task"
        android:id="@+id/btn_save_task"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="@+id/horaArea"
        app:layout_constraintStart_toStartOf="@+id/horaArea"
        app:layout_constraintTop_toBottomOf="@+id/horaArea"
        />
</androidx.constraintlayout.widget.ConstraintLayout>